Fixup the front page and align header sizes to be nicer

--- a/files/css/site.css
+++ b/files/css/site.css
@@ -1,6 +1,13 @@
-h1 { font-size: 2.2rem; }
+h1 { font-size: 2.2rem; font-weight: bold; }
+h2 { font-size: 1.8rem; font-weight: bold; }
+h3 { font-size: 1.6rem; font-weight: bold; }
+h4,h5,h6 { color: #222222; font-size: 1.4rem; font-weight: 600; }
 
-h1,h2,h3,h4,h5,h6 { font-family: "Arial"; }
+.panel {
+  padding-top: 0.5rem;
+}
+
+body,h1,h2,h3,h4,h5,h6 { font-family: "Source Sans Pro"; }
 
 a { color: #333399; }
 p a { border-bottom: 1px dotted #999999; }
